--- a/feb28/Makefile
+++ b/feb28/Makefile
@@ -1,5 +1,5 @@
 
-PROGRAMS = layout layout-row layout-column mm-blas mm-ijk numwave
+PROGRAMS = layout layout-row layout-column mm-blas mm-ijk
 INCLUDES = -I.
 
 CFLAGS = -O3 -Wall $(INCLUDES)
@@ -27,9 +27,6 @@ mm-ijk: mm-ijk.o
 
 mm-blas: mm-blas.o
 	$(CC) $(CFLAGS) -m32 -std=gn99 -o mm-blas $< -llapacke -lblas -lm
-
-numwave: numwave.o numwave-list.o numwave-vector.o
-	$(CC) $(CFLAGS) -o $@ $< numwave-list.o numwave-vector.o
 
 clean:
 	rm -f $(PROGRAMS) *.o core a.out data layout.s
