remove blas from makefile

--- a/feb28/Makefile
+++ b/feb28/Makefile
@@ -1,5 +1,5 @@
 
-PROGRAMS = layout layout-row layout-column mm-blas mm-ijk
+PROGRAMS = layout layout-row layout-column mm-ijk
 INCLUDES = -I.
 
 CFLAGS = -O3 -Wall $(INCLUDES)
@@ -24,9 +24,6 @@ layout-row: layout-row.o nop.o
 
 mm-ijk: mm-ijk.o
 	$(CC) $(CFLAGS) -o mm-ijk $< -lm
-
-mm-blas: mm-blas.o
-	$(CC) $(CFLAGS) -m32 -std=gn99 -o mm-blas $< -llapacke -lblas -lm
 
 clean:
 	rm -f $(PROGRAMS) *.o core a.out data layout.s
