--- a/mar11/Makefile
+++ b/mar11/Makefile
@@ -1,5 +1,5 @@
 
-PROGRAMS = ptest fdtest fdtest2 forktest threadtest
+PROGRAMS = ptest fdtest fdtest2 forktest threadtest duptest
 INCLUDES = -I.
 
 CFLAGS = -O3 -Wall $(INCLUDES)
